--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg position-fixed w-100 bg-light ">
+<nav style="z-index: 1;" class="navbar navbar-expand-lg position-fixed w-100 bg-light  ">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="">
         <i class="fa-solid fa-cart-flatbed fa-beat-fade"></i>
@@ -14,15 +14,15 @@
           </li>
           
           <li class="nav-item dropdown">
-            <a routerLink="user/login" class="btn "><i class="fa-solid fa-user me-2"></i> Login</a>
+            <a routerLink="/user/login" class="btn "><i class="fa-solid fa-user me-2"></i> Login</a>
           </li>
           <li class="nav-item ms-lg-2">
-            <a routerLink="wishlist" class=" btn btn-outline-dark" > <i class="fa-solid fa-heart me-2 text-danger"></i> Wishlist
+            <a routerLink="/wishlist" class=" btn btn-outline-dark" > <i class="fa-solid fa-heart me-2 text-danger"></i> Wishlist
                 <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
             </a>
           </li>
           <li class="nav-item ms-lg-2">
-            <a routerLink="cart" class=" btn btn-outline-dark" ><i class="fa-solid fa-cart-shopping me-2"></i>Cart
+            <a routerLink="/cart" class=" btn btn-outline-dark" ><i class="fa-solid fa-cart-shopping me-2"></i>Cart
                 <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
             </a>
           </li>
