--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,5 @@
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
-    font-family: sofia-sans;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
