--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,7 +4,7 @@
         <div class="col-lg-6">
             <img class="img-fluid" src="https://i.pinimg.com/736x/6b/1b/22/6b1b22573f9f3d4bba11a9fa5cb45652.jpg" alt="">
         </div>
-        <div class="col-lg-6 bg-primary ">
+        <div class="col-lg-6 bg-info ">
             <div style="height: 100%;" class="d-flex align-items-center justify-content-center flex-column text-light">
                 <h4 class="fw-bolder">Welcome User</h4>
                 <form class="mt-3">
