--- a/src/app/view-product/view-product.component.html
+++ b/src/app/view-product/view-product.component.html
@@ -3,14 +3,14 @@
     <section class="py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
-                <div class="col-md-6"><img style="height: 400px;" class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
+                <div class="col-md-6"><img style="height: 400px;" class="card-img-top mb-5 mb-md-0" [src]="product.image" alt="..." /></div>
                 <div class="col-md-6">
-                    <div class="small mb-1">P ID: BST-498</div>
-                    <h1 class="display-5 fw-bolder">Shop item template</h1>
+                    <div class="small mb-1">P ID: {{product._id}}</div>
+                    <h1 class="display-5 fw-bolder">{{product.title}}</h1>
                     <div class="fs-5 mb-5">
-                        <span>$40.00</span>
+                        <span>${{product.price}}</span>
                     </div>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
+                    <p style="text-align: justify;"> <span class="fw-bolder">Description:</span><span class="lead"> {{product.description}}</span></p>
                     <div class="d-flex justify-content-between">
                        
                         <button class="btn btn-outline-dark  mt-auto"><i class="fa-solid fa-heart text-danger fa-2x"></i>Add to Wishlist</button>
