--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,15 +7,19 @@
         <div class="col-lg-6 bg-primary ">
             <div style="height: 100%;" class="d-flex align-items-center justify-content-center flex-column text-light">
                 <h4 class="fw-bolder">Welcome User</h4>
-                <form class="mt-3">
+                <form [formGroup]="loginForm" (ngSubmit)="login()" class="mt-3">
                     <div class="mb-3">
-                        <input style="width: 400px;" placeholder="Email Id Please" type="text" class="form-control ">
+                        <input style="width: 400px;" placeholder="Email Id Please" type="text" class="form-control " formControlName="email">
                     </div>
+                    <!-- validation -->
+                    <div *ngIf="this.loginForm.get('email')?.errors && this.loginForm.get('email')?.touched" class="fw-bolder text-danger mb-3">Invalid Email</div>
                     <div class="mb-3">
-                        <input style="width: 400px;" placeholder="Password Please" type="password" class="form-control ">
+                        <input style="width: 400px;" placeholder="Password Please" type="password" class="form-control " formControlName="password">
                     </div>
+                    <!-- validation -->
+                    <div *ngIf="this.loginForm.get('password')?.errors && this.loginForm.get('password')?.touched" class="fw-bolder text-danger mb-3">Invalid Password</div>
                     <div class="mb-3">
-                        <input  value="Login" type="button" class="btn btn-light ">
+                        <input  value="Login" type="submit" class="btn btn-light ">
                     </div>
                 </form>
                 <p>New User? Click here to <a routerLink="/user/register" class="text-light">Register</a></p>
