--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,18 +7,24 @@
         <div class="col-lg-6 bg-info ">
             <div style="height: 100%;" class="d-flex align-items-center justify-content-center flex-column text-light">
                 <h4 class="fw-bolder">Welcome User</h4>
-                <form class="mt-3">
+                <form [formGroup]="registerForm" (ngSubmit)="register()" class="mt-3">
                     <div class="mb-3">
-                        <input style="width: 400px;" placeholder="Username Please" type="text" class="form-control ">
+                        <input style="width: 400px;" placeholder="Username Please" type="text" class="form-control " formControlName="username">
                     </div>
+                    <!-- validation -->
+                    <div *ngIf="this.registerForm.get('username')?.errors && this.registerForm.get('username')?.touched" class="fw-bolder text-danger mb-3">Invalid Username</div>
                     <div class="mb-3">
-                        <input style="width: 400px;" placeholder="Email Id Please" type="text" class="form-control ">
+                        <input style="width: 400px;" placeholder="Email Id Please" type="text" class="form-control " formControlName="email">
                     </div>
+                    <!-- validation -->
+                    <div *ngIf="this.registerForm.get('email')?.errors && this.registerForm.get('email')?.touched" class="fw-bolder text-danger mb-3">Invalid Email</div>
                     <div class="mb-3">
-                        <input style="width: 400px;" placeholder="Password Please" type="password" class="form-control ">
+                        <input style="width: 400px;" placeholder="Password Please" type="password" class="form-control " formControlName="password">
                     </div>
+                    <!-- validation -->
+                    <div *ngIf="this.registerForm.get('password')?.errors && this.registerForm.get('password')?.touched" class="fw-bolder text-danger mb-3">Invalid Password</div>
                     <div class="mb-3">
-                        <input  value="Register" type="button" class="btn btn-light ">
+                        <input  value="Register" type="submit" class="btn btn-light ">
                     </div>
                 </form>
                 <p>Already a User? Click here to <a routerLink="/user/login" class="text-light">Login</a></p>
