add to wishlist

--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -43,8 +43,8 @@
                         <!-- Product actions-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="d-flex justify-content-between">
-                                <button class="btn  mt-auto"><i class="fa-solid fa-heart text-danger fa-2x"></i></button>
-                                <button class="btn  mt-auto"><i class="fa-solid fa-cart-plus text-success fa-2x"></i></button>
+                                <button (click)="addtowishlist(product)" class="btn  mt-auto"><i class="fa-solid fa-heart text-danger fa-2x"></i></button>
+                                <button (click)="addtocart(product)" class="btn  mt-auto"><i class="fa-solid fa-cart-plus text-success fa-2x"></i></button>
                             </div>
                         </div>
                     </div>
