--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,7 @@
           <li class="nav-item">
             <input style="width: 400px;" class="form-control me-2" type="search" placeholder="Search Products Here!!!" aria-label="Search">
           </li>
-          
-          <li class="nav-item dropdown">
-            <a routerLink="/user/login" class="btn "><i class="fa-solid fa-user me-2"></i> Login</a>
-          </li>
+
           <li class="nav-item ms-lg-2">
             <a routerLink="/wishlist" class=" btn btn-outline-dark" > <i class="fa-solid fa-heart me-2 text-danger"></i> Wishlist
                 <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -25,6 +22,13 @@
             <a routerLink="/cart" class=" btn btn-outline-dark" ><i class="fa-solid fa-cart-shopping me-2"></i>Cart
                 <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
             </a>
+          </li>
+          <li *ngIf="!username" class="nav-item dropdown">
+            <a routerLink="/user/login" class="btn "><i class="fa-solid fa-user me-2"></i> Login</a>
+          </li>
+          <li *ngIf="username" class="nav-item dropdown">
+            <span class="btn fw-bolder"><i class="fa-solid fa-user me-2"></i> Welcome <span class="text-primary">{{username}}</span></span>
+            <button class=" btn btn-outline-dark">Logout</button>
           </li>
         </ul>
         
