--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
 
           <li class="nav-item ms-lg-2">
             <a routerLink="/wishlist" class=" btn btn-outline-dark" > <i class="fa-solid fa-heart me-2 text-danger"></i> Wishlist
-                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                <span class="badge bg-dark text-white ms-1 rounded-pill">{{wislistCount}}</span>
             </a>
           </li>
           <li class="nav-item ms-lg-2">
