--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -2,8 +2,8 @@
 
 <div style="margin-top: 80px;">
 
-    <!-- wishlist without items -->
-<div style="height: auto;" class="d-flex justify-content-center align-items-center w-100">
+    <!-- cart without items -->
+<div *ngIf="cart.length==0" style="height: auto;" class="d-flex justify-content-center align-items-center w-100">
     <div>
         <img style="height: auto;" class="img-fluid" src="https://cdni.iconscout.com/illustration/premium/thumb/empty-cart-5521508-4610092.png" alt="">
         <div class="text-center">
@@ -14,12 +14,12 @@
 </div>
    
     <!-- cart with items -->
-    <section class="py-5">
-        <div class="container px-4 px-lg-5 mt-5">
+    <section *ngIf="cart.length>0" class="py-5">
+        <div class="container px-4 px-lg-5 ">
             <div class="row">
                 <div class="col-lg-8">
                     <h2>Cart Summary</h2>
-                    <table class="table shadow mt-3">
+                    <table class="table shadow mt-5">
                         <thead>
                             <tr>
                                 <th>#</th>
@@ -31,18 +31,18 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td style="width: 250px;">Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops</td>
-                                <td> <img height="100px" width="100px" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" alt=""> </td>
+                            <tr *ngFor="let product of cart;let i= index;">
+                                <td>{{i+1}}</td>
+                                <td style="width: 250px;">{{product.title}}</td>
+                                <td> <img height="100px" width="100px" [src]="product.image" alt=""> </td>
                                 <td>
                                     <div class="d-flex">
-                                        <button class="btn fw-bolder fs-2">-</button>
-                                         <input class="form-control text-center" id="inputQuantity" type="num" value="1" style="max-width: 3rem" readonly/>
-                                        <button class="btn fw-bolder fs-2">+</button>
+                                        <button (click)="decrementQuantity(product.id)" class="btn fw-bolder fs-2">-</button>
+                                         <input class="form-control text-center" id="inputQuantity" type="num" [value]="product.quantity" style="max-width: 3rem" readonly/>
+                                        <button  (click)="incrementQuantity(product.id)"class="btn fw-bolder fs-2">+</button>
                                     </div>
                                 </td>
-                                <td>$300</td>
+                                <td>${{product.totalPrice}}</td>
                                 <td> <button class="btn fs-4"><i class="fa-solid fa-trash text-danger"></i></button> </td>
                             </tr>
                         </tbody>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="border shadow rounded p-3">
-                        <h4>Sub Total: <b class="text-danger"> $1000 </b></h4>
+                        <h4>Sub Total: <b class="text-danger"> ${{cartTotalPrice}} </b></h4>
                         
                         <hr>
                         <div class="d-grid">
