--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <input style="width: 400px;" class="form-control me-2" type="search" placeholder="Search Products Here!!!" aria-label="Search">
+            <div class="d-flex">
+              <input style="width: 400px;" class="form-control me-2" type="search" placeholder="Search Products Here!!!" aria-label="Search" #search>
+              <button (click)="getSearchKey(search)" style="margin-left: -100px;" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
           </li>
 
           <li class="nav-item ms-lg-2">
@@ -20,7 +23,7 @@
           </li>
           <li class="nav-item ms-lg-2">
             <a routerLink="/cart" class=" btn btn-outline-dark" ><i class="fa-solid fa-cart-shopping me-2"></i>Cart
-                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                <span class="badge bg-dark text-white ms-1 rounded-pill">{{cartCount}}</span>
             </a>
           </li>
           <li *ngIf="!username" class="nav-item dropdown">
