--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -37,18 +37,18 @@
                                 <td> <img height="100px" width="100px" [src]="product.image" alt=""> </td>
                                 <td>
                                     <div class="d-flex">
-                                        <button (click)="decrementQuantity(product.id)" class="btn fw-bolder fs-2">-</button>
+                                        <button (click)="decrementQuantity(product._id)" class="btn fw-bolder fs-2">-</button>
                                          <input class="form-control text-center" id="inputQuantity" type="num" [value]="product.quantity" style="max-width: 3rem" readonly/>
-                                        <button  (click)="incrementQuantity(product.id)"class="btn fw-bolder fs-2">+</button>
+                                        <button  (click)="incrementQuantity(product._id)"class="btn fw-bolder fs-2">+</button>
                                     </div>
                                 </td>
                                 <td>${{product.totalPrice}}</td>
-                                <td> <button class="btn fs-4"><i class="fa-solid fa-trash text-danger"></i></button> </td>
+                                <td> <button (click)="removeItem(product._id)" class="btn fs-4"><i class="fa-solid fa-trash text-danger"></i></button> </td>
                             </tr>
                         </tbody>
                     </table>
                     <div class="d-flex justify-content-end">
-                        <button class="btn btn-warning me-2">Empty cart</button>
+                        <button (click)="emptyCart()" class="btn btn-warning me-2">Empty cart</button>
         
                         <a routerLink="" class="btn btn-success">Shop More</a>
         
