--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,1 +1,42 @@
-<p>checkout works!</p>
+<app-header></app-header>
+<div style="height: auto; margin-top: 100px;" class="container w-100 d-flex justify-content-center align-items-center flex-column">
+    <div *ngIf="!checkoutStatus" class="w-50">
+        <h1>Delivery Details</h1>
+        <form [formGroup]="checkOutForm" class="border rounded shadow p-5" (ngSubmit)="proceedToBuy()">
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInputname" placeholder="Username" name="uname" formControlName="uname">
+                <label for="floatingInputname">Username</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInputflat" placeholder="Apartment /Flat No." name="flat" formControlName="flat">
+                <label for="floatingInputflat">Apartment /Flat No.</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInputlocation" placeholder="Place" name="place" formControlName="place">
+                <label for="floatingInputlocation">Place</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInputpin" placeholder="Pincode" name="pincode" formControlName="pincode">
+                <label for="floatingInputpin">Pincode</label>
+              </div>
+              <div class="d-flex justify-content-between">
+                <button (click)="cancel()" class="btn btn-warning">Cancel</button>
+                <button class="btn btn-success" type="submit">Proceed to Buy</button>
+              </div>
+        </form>
+    </div>
+    <div *ngIf="checkoutStatus" class="w-50">
+        <h1 class="mb-5">Payment Details</h1>
+        <h3>Devilery Address</h3>
+        <h5>{{checkOutForm.value.uname}}</h5>
+        <h5>{{checkOutForm.value.flat}}</h5>
+        <h5>{{checkOutForm.value.place}}</h5>
+        <h5>{{checkOutForm.value.pincode}}</h5>
+        <div class="d-flex justtify-content-center mt-3">
+            <h6 class="fw-bolder">Total Amount: <span class="text-danger">$ 3000</span></h6>
+
+        </div>
+    </div>
+</div>
+
+<app-footer></app-footer>
