--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -60,7 +60,7 @@
                         
                         <hr>
                         <div class="d-grid">
-                            <a routerLink="/user/checkout"  class="btn btn-primary">Check Out</a>
+                            <button (click)="checkout()"  class="btn btn-primary">Check Out</button>
                         </div>
                     </div>
                 </div>
