--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,7 +31,7 @@
           </li>
           <li *ngIf="username" class="nav-item dropdown">
             <span class="btn fw-bolder"><i class="fa-solid fa-user me-2"></i> Welcome <span class="text-primary">{{username}}</span></span>
-            <button class=" btn btn-outline-dark">Logout</button>
+            <button (click)="logout()" class=" btn btn-outline-dark">Logout</button>
           </li>
         </ul>
         
