--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
-<nav style="z-index: 1;" class="navbar navbar-expand-lg position-fixed w-100 bg-light  ">
+<nav style="z-index: 1;" class="navbar navbar-expand-lg  w-100 bg-light  ">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="">
-        <i class="fa-solid fa-cart-flatbed fa-beat-fade"></i>
+        <i class="fa-solid fa-cart-flatbed fa-beat-fade text-primary"></i>
         <span class="text-primary fw-bolder ms-2 fs-4">DropCart</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
