--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,17 +9,17 @@
                 <h4 class="fw-bolder">Welcome User</h4>
                 <form [formGroup]="registerForm" (ngSubmit)="register()" class="mt-3">
                     <div class="mb-3">
-                        <input style="width: 400px;" placeholder="Username Please" type="text" class="form-control " formControlName="username">
+                        <input style="width: 400px;" name="username"placeholder="Username Please" type="text" class="form-control " formControlName="username">
                     </div>
                     <!-- validation -->
                     <div *ngIf="this.registerForm.get('username')?.errors && this.registerForm.get('username')?.touched" class="fw-bolder text-danger mb-3">Invalid Username</div>
                     <div class="mb-3">
-                        <input style="width: 400px;" placeholder="Email Id Please" type="text" class="form-control " formControlName="email">
+                        <input style="width: 400px;" name="email" placeholder="Email Id Please" type="text" class="form-control " formControlName="email">
                     </div>
                     <!-- validation -->
                     <div *ngIf="this.registerForm.get('email')?.errors && this.registerForm.get('email')?.touched" class="fw-bolder text-danger mb-3">Invalid Email</div>
                     <div class="mb-3">
-                        <input style="width: 400px;" placeholder="Password Please" type="password" class="form-control " formControlName="password">
+                        <input style="width: 400px;" name="password" placeholder="Password Please" type="password" class="form-control " formControlName="password">
                     </div>
                     <!-- validation -->
                     <div *ngIf="this.registerForm.get('password')?.errors && this.registerForm.get('password')?.touched" class="fw-bolder text-danger mb-3">Invalid Password</div>
