--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -35,7 +35,7 @@
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="d-flex justify-content-between">
                                 <button (click)="removeWishlistItem(product._id)" class="btn  mt-auto"><i class="fa-solid fa-heart-circle-minus fa-2x text-danger"></i></button>
-                                <button class="btn  mt-auto"><i class="fa-solid fa-cart-plus text-success fa-2x"></i></button>
+                                <button (click)="addtocart(product)"class="btn  mt-auto"><i class="fa-solid fa-cart-plus text-success fa-2x"></i></button>
                             </div>
                         </div>
                     </div>
